IrshadDev/src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_Date__c</fullName>
        <label>start Date</label>
        <type>Date</type>
    </fields>
    <label>Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>